@@ -18,7 +18,7 @@ use lib qw( t/core/lib ./lib ../lib ../../lib );
 use Badger::Utils 'UTILS blessed xprintf reftype textlike plural';
 use Badger::Debug;
 use Badger::Test 
-    tests => 45,
+    tests => 51,
     debug => 'Badger::Utils',
     args  => \@ARGV;
 
@@ -83,6 +83,43 @@ is( $p, $hash, 'self_params returns params' );
 ($s, $p) = $selfish->test1(%$hash);
 is( $s, $selfish, 'self_params returns self again' );
 is( $p->{a}, 10, 'self_params returns params again' );
+
+# test warnings generated by add number of arguments - this is invaluable
+# for debugging
+
+
+sub foo { bar(@_) }
+sub bar { baz(@_) }
+sub baz { params(@_) }
+
+{ 
+    my @warnings;
+    local $SIG{__WARN__} = sub {
+        push(@warnings, @_);
+    };
+    $Badger::Utils::DEBUG = 1;
+    foo(1, 2, 3);
+    is( 
+        $warnings[0], 
+        "Badger::Utils::params() called with an odd number of arguments: 1, 2, 3\n",
+        'got odd number of arguments warning'
+    );
+    like( 
+        $warnings[1], 
+        qr/#1: Called from main::baz/,
+        'got baz() in stack trace'
+    );
+    like( 
+        $warnings[2], 
+        qr/#2: Called from main::bar/,
+        'got bar() in stack trace'
+    );
+    like( 
+        $warnings[3], 
+        qr/#3: Called from main::foo/,
+        'got foo() in stack trace'
+    );
+}
 
 
 #-----------------------------------------------------------------------
@@ -202,6 +239,20 @@ is( length random_name(16), 16, 'random_name(16) length is 16');
 is( length random_name(32), 32, 'random_name(16) length is 32');
 is( length random_name(48), 48, 'random_name(16) length is 48');
 is( length random_name(64), 64, 'random_name(16) length is 64');
+
+
+#-----------------------------------------------------------------------
+# test camel_case()
+#-----------------------------------------------------------------------
+
+use Badger::Utils 'camel_case';
+
+is( camel_case('hello_world'), 'HelloWorld', 
+   "camel_case('hello_world') => 'HelloWorld'" 
+);
+is( camel_case('FOO_bar'), 'FOOBar', 
+   "camel_case('FOO_bar') => 'FOOBar'"
+);
 
 
 __END__
